Inicio de retoques en la parte grafica
Uso de la clase card para generar las publicaciones del diario, luego
deberan hacerse automaticamente con las noticias que esten guardadas

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -12,6 +12,8 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/myStyle.css">
+
     <!-- endbuild -->
   </head>
   <body ng-app="clientApp">
@@ -20,6 +22,10 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <div id="titulo" class="header jumbotron"><h1>Mix de Noticias</h1>
+    <p>No te quedes con solo un diario, miralos todos desde un solo lugar</p>
+    </div>
+
     <div class="header">
       <div class="navbar navbar-default" role="navigation">
         <div class="container">
@@ -40,7 +46,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/noticias">Noticias</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/">Aca tienen que ir categorias de noticias</a></li>
             </ul>
           </div>
         </div>
