Acceso a base de datos desde cliente
Se hace el acceso a la base de datos y se publican las noticias en la
portada (como prueba).

- Hay que agrupar conjuntos de noticias del mismo tema
- Publicar en la pagina principal los accesos a los temas generales
- Las publicaciones aun no tienen link a la noticia de la que hablan

Se agrupo en dos colecciones la informacion (noticias y portada),
agregando el campo "diario" a ellas para saber a que diario pertenece
cada una. (esta hecho para telam e infobae, no se agrego aun a las
demas)

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -53,13 +53,13 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid" >
     <div ng-view=""></div>
     </div>
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> from the Mix Noticias team</p>
       </div>
     </div>
 
